--- a/visit.html
+++ b/visit.html
@@ -1,130 +1,165 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Visit</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="Visit us. Admission is free for all.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="description" content="Visit us. Admission is free for all." />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!--CSS-->
-    <link rel="stylesheet" href="css/visit.css">
+    <link rel="stylesheet" href="css/visit.css" />
     <!--Favicon-->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png" />
     <!--Icons-->
-    <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
+    <script
+      src="https://kit.fontawesome.com/87671af21f.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <header>
-        <a href="index.html" class="header-logo">
-            <img src="./assets/open-science-735787-removebg-preview-2.png"
-                alt="Logo of earth with a keyhole and galaxies around.">
-        </a>
-        <label for="menu-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
-            <i class="fas fa-bars fa"></i>
-        </label>
-        <input type="checkbox" name="menu-checkbox" id="menu-checkbox">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="explore.html">Explore</a>
-            <a href="exhibitions.html">Exhibitions</a>
-            <a href="events.html">Events</a>
-            <a href="tickets.html">Tickets</a>
-            <a href="cart.html">Cart</a>
-        </nav>
+      <a href="index.html" class="header-logo">
+        <img
+          src="./assets/open-science-735787-removebg-preview-2.png"
+          alt="Logo of earth with a keyhole and galaxies around."
+        />
+      </a>
+      <label
+        for="menu-checkbox"
+        class="hamburger-icon"
+        aria-label="Open navigation mobile"
+      >
+        <i class="fas fa-bars fa"></i>
+      </label>
+      <input type="checkbox" name="menu-checkbox" id="menu-checkbox" />
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="explore.html">Explore</a>
+        <a href="exhibitions.html">Exhibitions</a>
+        <a href="events.html">Events</a>
+        <a href="tickets.html">Tickets</a>
+        <a href="cart.html">Cart</a>
+      </nav>
     </header>
     <main>
-        <h1>Visit</h1>
-        <section class="museum-info">
-            <div class="card museum">
-                <img src="./assets/scott-webb-102825.jpg" alt="Colorful museum sign">
-            </div>
-            <div class="museum-info__text">
-                <section class="info">
-                    <h2>Opening Hours</h2>
-                    <p>Monday: Closed</p>
-                    <p>Tuesday: 10:00 - 16:00</p>
-                    <p>Wednesday: 10:00 - 16:00</p>
-                    <p>Thursday: 10:00 - 16:00</p>
-                    <p>Friday: 10:00 - 19:00</p>
-                    <p>Saturday: 9:00 - 16:00</p>
-                    <p>Sunday: 9:00 - 13:00</p>
-                </section>
-                <section class="info">
-                    <h2>Admission</h2>
-                    <p>The entrance is <strong>free</strong> for all.</p>
-                </section>
-            </div>
-        </section>
-
-
-        <section class="card large">
-            <h2>Guided Tours</h2>
-            <div class="guided-tours">
-                <div class="card-image-container">
-                    <img src="./assets/exhibition-1863344_1920.jpg" alt="Museum hall with exhibitions">
-                </div>
-                <div class="text">
-                    <p>There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and
-                        include a handy printed guide of the museum.</p>
-                    <a href="tickets.html" class="cta-button">Buy tickets</a>
-                    <p>If you would like to organise a guided tour for your group of 6 or more people, please contact us
-                        to arrange the tour.</p>
-                    <a href="contact-us.html" class="cta-button">Contact us</a>
-                </div>
-            </div>
-        </section>
-        <div class="info-section">
-            <section class="info">
-                <h2>Accessibility</h2>
-                <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for
-                    the visually impaired.</p>
-            </section>
-            <section class="info">
-                <h2>Food and Drinks</h2>
-                <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks
-                    and more.</p>
-            </section>
-            <section class="info">
-                <h2>Shop</h2>
-                <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that
-                    allow you to continue to explore science even after you've left the museum.</p>
-            </section>
+      <h1>Visit</h1>
+      <section class="museum-info">
+        <div class="card museum">
+          <img
+            src="./assets/scott-webb-102825.jpg"
+            alt="Colorful museum sign"
+          />
         </div>
-        <section>
-            <h2>Location</h2>
-            <div class="info">
-                <p>The museum is located at:</p>
-                <p>Mølleparken 4, 0459 Oslo</p>
-            </div>
-            <div class="map-container">
-                <div class="map-container-img-mobile">
-                    <iframe title="Interactive google maps of Noroff Oslo"
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317143501!5m2!1sno!2sno"
-                        width="343" height="343" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div class="map-container-img-desktop">
-                    <iframe title="Interactive google maps of Noroff Oslo"
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317432426!5m2!1sno!2sno"
-                        width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
+        <div class="museum-info__text">
+          <section class="info">
+            <h2>Opening Hours</h2>
+            <p>Monday: Closed</p>
+            <p>Tuesday: 10:00 - 16:00</p>
+            <p>Wednesday: 10:00 - 16:00</p>
+            <p>Thursday: 10:00 - 16:00</p>
+            <p>Friday: 10:00 - 19:00</p>
+            <p>Saturday: 9:00 - 16:00</p>
+            <p>Sunday: 9:00 - 13:00</p>
+          </section>
+          <section class="info">
+            <h2>Admission</h2>
+            <p>The entrance is <strong>free</strong> for all.</p>
+          </section>
+        </div>
+      </section>
+      <section class="card large">
+        <h2>Guided Tours</h2>
+        <div class="guided-tours">
+          <div class="card-image-container">
+            <img
+              src="./assets/exhibition-1863344_1920.jpg"
+              alt="Museum hall with exhibitions"
+            />
+          </div>
+          <div class="text">
+            <p>
+              There are guided tours of the museum that leave every hour. These
+              tours are 70 NOK per person and include a handy printed guide of
+              the museum.
+            </p>
+            <a href="tickets.html" class="cta-button">Buy tickets</a>
+            <p>
+              If you would like to organise a guided tour for your group of 6 or
+              more people, please contact us to arrange the tour.
+            </p>
+            <a href="contact-us.html" class="cta-button">Contact us</a>
+          </div>
+        </div>
+      </section>
+      <div class="info-section">
+        <section class="info">
+          <h2>Accessibility</h2>
+          <p>
+            The museum has wheelchair accessibility ramps. It also has audio
+            guides and braille display signs for the visually impaired.
+          </p>
         </section>
+        <section class="info">
+          <h2>Food and Drinks</h2>
+          <p>
+            There is a café attached to the museum where you can get light
+            lunches, soft drinks, coffee, snacks and more.
+          </p>
+        </section>
+        <section class="info">
+          <h2>Shop</h2>
+          <p>
+            Our shop offers a range of memorabilia from the museum as well as
+            great gifts and activity packs that allow you to continue to explore
+            science even after you've left the museum.
+          </p>
+        </section>
+      </div>
+      <section>
+        <h2>Location</h2>
+        <div class="info">
+          <p>The museum is located at:</p>
+          <p>Mølleparken 4, 0459 Oslo</p>
+        </div>
+        <div class="map-container">
+          <div class="map-container-img-mobile">
+            <iframe
+              title="Interactive google maps of Noroff Oslo"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317143501!5m2!1sno!2sno"
+              width="343"
+              height="343"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="map-container-img-desktop">
+            <iframe
+              title="Interactive google maps of Noroff Oslo"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317432426!5m2!1sno!2sno"
+              width="1000"
+              height="600"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-        <a href="about.html">About</a>
-        <a href="contact-us.html">Send us a message</a>
-        <a href="get-involved.html">Get involved</a>
-        <a href="visit.html" class="nav-active">Visit</a>
+      <a href="about.html">About</a>
+      <a href="contact-us.html">Send us a message</a>
+      <a href="get-involved.html">Get involved</a>
+      <a href="visit.html" class="nav-active">Visit</a>
     </footer>
-</body>
-
+  </body>
 </html>
