--- a/check-out-success.html
+++ b/check-out-success.html
@@ -26,10 +26,12 @@
   <body>
     <header>
       <a href="index.html" class="header-logo">
-        <img
-          src="./assets/open-science-735787-removebg-preview-2.png"
-          alt="Logo of earth with a keyhole and galaxies around."
-        />
+        <div class="header-logo-container">
+          <img
+            src="./assets/open-science-735787-removebg-preview-2.png"
+            alt="Logo of earth with a keyhole and galaxies around."
+          />
+        </div>
       </a>
       <label
         for="menu-checkbox"
