Format cleanup after NU test

--- a/about.html
+++ b/about.html
@@ -1,96 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>About</title>
-    <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="About Community Science Museum a fun and interactive museum, accessible to all."
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <!--CSS-->
-    <link rel="stylesheet" href="css/about.css" />
-    <!--Favicon-->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png" />
-    <!--Icons-->
-    <script
-      src="https://kit.fontawesome.com/87671af21f.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <header>
-      <a href="index.html" class="header-logo">
-        <div class="header-logo-container">
-          <img
-            src="./assets/open-science-735787-removebg-preview-2.png"
-            alt="Logo of earth with a keyhole and galaxies around."
-          />
-        </div>
-      </a>
-      <label
-        for="menu-checkbox"
-        class="hamburger-icon"
-        aria-label="Open navigation mobile"
-      >
-        <i class="fas fa-bars fa"></i>
-      </label>
-      <input type="checkbox" name="menu-checkbox" id="menu-checkbox" />
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="explore.html">Explore</a>
-        <a href="exhibitions.html">Exhibitions</a>
-        <a href="events.html">Events</a>
-        <a href="tickets.html">Tickets</a>
-        <a href="cart.html">Cart</a>
-      </nav>
-    </header>
-    <main>
-      <h1>About us</h1>
-      <section class="about__text">
-        <h2>Making Science Accessible to Everyone</h2>
-        <h3>
-          Come join us at the Community Science Museum where we're committed to
-          making science accessible to all.
-        </h3>
-        <div class="logo__image-container">
-          <img
-            src="./assets/open-science-735787-removebg-preview-2.png"
-            alt="Logo of earth with a keyhole and galaxies around."
-          />
-        </div>
-        <p>
-          Over the course of human history, science has developed from our early
-          understanding of fire, wind, water, and earth to exploring everything
-          from galaxies far away to the very building blocks of life itself.
-        </p>
-        <p>
-          The aim of our museum is to create a space where everyone can
-          experience the wonders of our discoveries and perhaps even ignite a
-          lifelong passion to continue the exploration of the world around us.
-        </p>
-        <p>
-          We believe science should not be confined to the textbook, but brought
-          to life through exhibits. This is why we have over 1000 different
-          exhibits on the many varied subjects of science to explore. Many of
-          these exhibits are designed for you to interact with and play around
-          to see science come to life (apart from the dinosaur exhibits - they
-          only come to life at night when everyone's gone home).
-        </p>
-      </section>
-    </main>
-    <footer>
-      <a href="about.html" class="nav-active">About</a>
-      <a href="contact-us.html">Send us a message</a>
-      <a href="get-involved.html">Get involved</a>
-      <a href="visit.html">Visit</a>
-    </footer>
-  </body>
+
+<head>
+  <title>About</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="About Community Science Museum a fun and interactive museum, accessible to all.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--google fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+    rel="stylesheet">
+  <!--CSS-->
+  <link rel="stylesheet" href="css/about.css">
+  <!--Favicon-->
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
+  <!--Icons-->
+  <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header>
+    <a href="index.html" class="header-logo">
+      <div class="header-logo-container">
+        <img src="./assets/open-science-735787-removebg-preview-2.png"
+          alt="Logo of earth with a keyhole and galaxies around.">
+      </div>
+    </a>
+    <label for="menu-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
+      <i class="fas fa-bars fa"></i>
+    </label>
+    <input type="checkbox" name="menu-checkbox" id="menu-checkbox">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="explore.html">Explore</a>
+      <a href="exhibitions.html">Exhibitions</a>
+      <a href="events.html">Events</a>
+      <a href="tickets.html">Tickets</a>
+      <a href="cart.html">Cart</a>
+    </nav>
+  </header>
+  <main>
+    <h1>About us</h1>
+    <section class="about__text">
+      <h2>Making Science Accessible to Everyone</h2>
+      <h3>
+        Come join us at the Community Science Museum where we're committed to
+        making science accessible to all.
+      </h3>
+      <div class="logo__image-container">
+        <img src="./assets/open-science-735787-removebg-preview-2.png"
+          alt="Logo of earth with a keyhole and galaxies around.">
+      </div>
+      <p>
+        Over the course of human history, science has developed from our early
+        understanding of fire, wind, water, and earth to exploring everything
+        from galaxies far away to the very building blocks of life itself.
+      </p>
+      <p>
+        The aim of our museum is to create a space where everyone can
+        experience the wonders of our discoveries and perhaps even ignite a
+        lifelong passion to continue the exploration of the world around us.
+      </p>
+      <p>
+        We believe science should not be confined to the textbook, but brought
+        to life through exhibits. This is why we have over 1000 different
+        exhibits on the many varied subjects of science to explore. Many of
+        these exhibits are designed for you to interact with and play around
+        to see science come to life (apart from the dinosaur exhibits - they
+        only come to life at night when everyone's gone home).
+      </p>
+    </section>
+  </main>
+  <footer>
+    <a href="about.html" class="nav-active">About</a>
+    <a href="contact-us.html">Send us a message</a>
+    <a href="get-involved.html">Get involved</a>
+    <a href="visit.html">Visit</a>
+  </footer>
+</body>
+
 </html>
