--- a/events.html
+++ b/events.html
@@ -1,124 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Events</title>
-    <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Upcoming events and whats happening at the museum this week."
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <!--CSS-->
-    <link rel="stylesheet" href="css/events.css" />
-    <!--Favicon-->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png" />
-    <!--Icons-->
-    <script
-      src="https://kit.fontawesome.com/87671af21f.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <header>
-      <a href="index.html" class="header-logo">
-        <div class="header-logo-container">
-          <img
-            src="./assets/open-science-735787-removebg-preview-2.png"
-            alt="Logo of earth with a keyhole and galaxies around."
-          />
-        </div>
-      </a>
-      <label
-        for="menu-checkbox"
-        class="hamburger-icon"
-        aria-label="Open navigation mobile"
-      >
-        <i class="fas fa-bars fa"></i>
-      </label>
-      <input type="checkbox" name="menu-checkbox" id="menu-checkbox" />
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="explore.html">Explore</a>
-        <a href="exhibitions.html">Exhibitions</a>
-        <a href="events.html" class="nav-active">Events</a>
-        <a href="tickets.html">Tickets</a>
-        <a href="cart.html">Cart</a>
-      </nav>
-    </header>
-    <main>
-      <h1>Upcoming events</h1>
-      <section class="card upcoming-events">
-        <div class="card-image-container large">
-          <img
-            src="./assets/roberto-nickson-396152.jpg"
-            alt="A mammoth in the middle of a museum"
-          />
-        </div>
-        <div class="card-vertical">
-          <h2>Night in the museum</h2>
+
+<head>
+  <title>Events</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Upcoming events and whats happening at the museum this week.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--google fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+    rel="stylesheet">
+  <!--CSS-->
+  <link rel="stylesheet" href="css/events.css">
+  <!--Favicon-->
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
+  <!--Icons-->
+  <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header>
+    <a href="index.html" class="header-logo">
+      <div class="header-logo-container">
+        <img src="./assets/open-science-735787-removebg-preview-2.png"
+          alt="Logo of earth with a keyhole and galaxies around.">
+      </div>
+    </a>
+    <label for="menu-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
+      <i class="fas fa-bars fa"></i>
+    </label>
+    <input type="checkbox" name="menu-checkbox" id="menu-checkbox">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="explore.html">Explore</a>
+      <a href="exhibitions.html">Exhibitions</a>
+      <a href="events.html" class="nav-active">Events</a>
+      <a href="tickets.html">Tickets</a>
+      <a href="cart.html">Cart</a>
+    </nav>
+  </header>
+  <main>
+    <h1>Upcoming events</h1>
+    <section class="card upcoming-events">
+      <div class="card-image-container large">
+        <img src="./assets/roberto-nickson-396152.jpg" alt="A mammoth in the middle of a museum">
+      </div>
+      <div class="card-vertical">
+        <h2>Night in the museum</h2>
+        <p>
+          Get your family together for an exciting night in the museum as you
+          sleep over beside dinosaurs and science displays. Bring your own
+          sleeping bag and get ready to rough it as we go exploring the
+          wonders of science.
+        </p>
+        <a href="tickets.html" class="cta-button">Buy tickets</a>
+      </div>
+    </section>
+    <section>
+      <h2>What's happening this week</h2>
+      <div class="events__flex">
+        <article class="card large">
+          <h3>Friday</h3>
+          <div class="card-image-container__small">
+            <img src="./assets/celso-405219.jpg" alt="The moon in different phases.">
+          </div>
+          <h4>Visiting Professor of Aeronautics</h4>
           <p>
-            Get your family together for an exciting night in the museum as you
-            sleep over beside dinosaurs and science displays. Bring your own
-            sleeping bag and get ready to rough it as we go exploring the
-            wonders of science.
+            It is our pleasure to announce that Prof Sheila Widnall from the
+            Massachusetts Institute of Technology will be delivering 3
+            lectures on the development of aeronautics and where the future
+            lies in this exciting "space".
           </p>
           <a href="tickets.html" class="cta-button">Buy tickets</a>
-        </div>
-      </section>
-      <section>
-        <h2>What's happening this week</h2>
-        <div class="events__flex">
-          <article class="card large">
-            <h3>Friday</h3>
-            <div class="card-image-container__small">
-              <img
-                src="./assets/celso-405219.jpg"
-                alt="The moon in different phases."
-              />
-            </div>
-            <h4>Visiting Professor of Aeronautics</h4>
-            <p>
-              It is our pleasure to announce that Prof Sheila Widnall from the
-              Massachusetts Institute of Technology will be delivering 3
-              lectures on the development of aeronautics and where the future
-              lies in this exciting "space".
-            </p>
-            <a href="tickets.html" class="cta-button">Buy tickets</a>
-          </article>
-          <article class="card large">
-            <h3>Sunday</h3>
-            <div class="card-image-container__small">
-              <img
-                src="./assets/scientific-2040795_1280.jpg"
-                alt="A scientist looking at a reactor."
-              />
-            </div>
-            <h4>Energetica Exhibition on Loan</h4>
-            <p>
-              On loan from the NEMO Science Museum in Amsterdam, the Energetica
-              exhibition is coming to the Community Science Museum. It's a
-              series of installations that allow visitors to experience the
-              power of the elements as we harness them. From solar energy
-              powering lighting, to "Wind Island" that shows how turbines are
-              able to use and control wind to create power.
-            </p>
-            <a href="tickets.html" class="cta-button">Buy tickets</a>
-          </article>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <a href="about.html">About</a>
-      <a href="contact-us.html">Send us a message</a>
-      <a href="get-involved.html">Get involved</a>
-      <a href="visit.html">Visit</a>
-    </footer>
-  </body>
+        </article>
+        <article class="card large">
+          <h3>Sunday</h3>
+          <div class="card-image-container__small">
+            <img src="./assets/scientific-2040795_1280.jpg" alt="A scientist looking at a reactor.">
+          </div>
+          <h4>Energetica Exhibition on Loan</h4>
+          <p>
+            On loan from the NEMO Science Museum in Amsterdam, the Energetica
+            exhibition is coming to the Community Science Museum. It's a
+            series of installations that allow visitors to experience the
+            power of the elements as we harness them. From solar energy
+            powering lighting, to "Wind Island" that shows how turbines are
+            able to use and control wind to create power.
+          </p>
+          <a href="tickets.html" class="cta-button">Buy tickets</a>
+        </article>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <a href="about.html">About</a>
+    <a href="contact-us.html">Send us a message</a>
+    <a href="get-involved.html">Get involved</a>
+    <a href="visit.html">Visit</a>
+  </footer>
+</body>
+
 </html>
